# libdataframe

./: CMakeLists.txt  LICENSE
include/: cell.h  column.h  data_field.h  data_field_exception.h  data_frame.h  data_frame_exception.h  mortred_exception.h  row.h  schema.h  schema_exception.h  util.h
include/expression/: aggregate_expression.h  alias_expression.h  arithmetic_expression.h  bitwise_expression.h  conditional_expression.h  expression.h  expression_exception.h  math_expression.h  parameter_expression.h  predicate_expression.h  type_cast_expression.h
include/type/: date.h  decimal.h  interval.h  timestamp.h  type.h  type_converter.h  type_equal_visitor.h  type_exception.h  type_traits.h  type_visitor.h  type_visitor_inline.h
src/: CMakeLists.txt  column.cpp  data_field.cpp  data_frame.cpp  schema.cpp
src/expression/: aggregate_expression.cpp  alias_expression.cpp  arithmetic_expression.cpp  conditional_expression.cpp  expression.cpp  predicate_expression.cpp  type_cast_expression.cpp
src/type/: type.cpp  type_visitor.cpp
test/: CMakeLists.txt  test_dataframe.cpp  test_expression.cpp  test_type.cpp
